--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@unocss/preset-mini": "^0.49.4",
+    "@types/dom-to-image": "^2.6.4",
+    "@unocss/preset-uno": "^0.49.4",
     "@unocss/vite": "^0.49.4",
     "@widcardw/eslint-config": "0.3.0-beta.2",
+    "dom-to-image": "^2.6.0",
     "eslint": "^8.34.0",
     "typescript": "^4.9.5",
     "vite": "^4.1.1",
