--- a/package.json
+++ b/package.json
@@ -2,27 +2,32 @@
   "name": "vite-template-solid",
   "version": "0.0.0",
   "description": "",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
-  "license": "MIT",
+  "dependencies": {
+    "solid-js": "^1.6.10"
+  },
   "devDependencies": {
     "@types/dom-to-image": "^2.6.4",
     "@unocss/preset-uno": "^0.49.4",
     "@unocss/vite": "^0.49.4",
-    "@widcardw/eslint-config": "0.3.0-beta.2",
+    "@widcardw/eslint-config": "^0.3.1",
+    "@widcardw/eslint-config-solid": "^0.3.1",
     "dom-to-image": "^2.6.0",
     "eslint": "^8.34.0",
+    "solidjs-use": "^1.1.0",
     "typescript": "^4.9.5",
     "vite": "^4.1.1",
     "vite-plugin-solid": "^2.5.0"
   },
-  "dependencies": {
-    "solid-js": "^1.6.10"
-  },
   "eslintConfig": {
-    "extends": "@widcardw"
+    "extends": [
+      "@widcardw",
+      "@widcardw/eslint-config-solid"
+    ]
   }
 }
